Revert "fixed pages shifting up"
This reverts commit d9d2a33410bb2f3247cc78a83c71ae43f5c6e225.

--- a/app/assets/stylesheets/cvmdashboard.css
+++ b/app/assets/stylesheets/cvmdashboard.css
@@ -1,5 +1,4 @@
 .employees-index{
-    margin-top: 5%;
     background: linear-gradient(16deg, #ffefff, #fff);
 }
 
@@ -12,10 +11,8 @@
 }
 
 .cvm-index, .cvm-manage_charities {
-    margin-top: 5%;
-    height: calc(100vh - 0px);
+    height: calc(100vh - 80px);
     background: linear-gradient(16deg, #ffefff, #fff);
-    overflow: hidden;
 }
 
 #cvmdashboard{
